--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Taylor",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "net": "^1.0.2",
     "node-fetch": "^2.6.1",
